--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,6 +9,8 @@
 	"dependencies": {
 		"@conform-to/zod": "1.2.2",
 		"@isaacs/ttlcache": "1.4.1",
+		"@oslojs/crypto": "1.0.1",
+		"@oslojs/encoding": "1.1.0",
 		"@paddle/paddle-js": "1.3.3",
 		"@paddle/paddle-node-sdk": "2.5.0",
 		"@radix-ui/react-label": "2.1.1",
@@ -27,7 +29,6 @@
 		"@unkey/api": "0.32.0",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
-		"crypto-js": "4.2.0",
 		"dayjs": "1.11.13",
 		"drizzle-orm": "0.38.4",
 		"embla-carousel-autoplay": "8.5.2",
@@ -60,7 +61,6 @@
 	"devDependencies": {
 		"@react-router/dev": "7.1.3",
 		"@tailwindcss/typography": "0.5.16",
-		"@types/crypto-js": "4.2.2",
 		"@types/lodash": "4.17.15",
 		"@types/nodemailer": "6.4.17",
 		"@types/react": "18.3.18",
