--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,15 +9,17 @@
 	"dependencies": {
 		"@conform-to/zod": "1.2.2",
 		"@isaacs/ttlcache": "1.4.1",
+		"@oslojs/crypto": "1.0.1",
+		"@oslojs/encoding": "1.1.0",
 		"@paddle/paddle-js": "1.3.3",
-		"@paddle/paddle-node-sdk": "2.4.0",
+		"@paddle/paddle-node-sdk": "2.5.0",
 		"@radix-ui/react-label": "2.1.1",
 		"@radix-ui/react-slot": "1.1.1",
 		"@radix-ui/react-tooltip": "1.1.7",
 		"@react-email/components": "0.0.32",
-		"@remix-run/node": "2.15.2",
-		"@remix-run/react": "2.15.2",
-		"@remix-run/serve": "2.15.2",
+		"@react-router/fs-routes": "7.1.3",
+		"@react-router/node": "7.1.3",
+		"@react-router/serve": "7.1.3",
 		"@ryot/generated": "workspace:*",
 		"@ryot/graphql": "workspace:*",
 		"@ryot/transactional": "workspace:*",
@@ -27,7 +29,6 @@
 		"@unkey/api": "0.32.0",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
-		"crypto-js": "4.2.0",
 		"dayjs": "1.11.13",
 		"drizzle-orm": "0.38.4",
 		"embla-carousel-autoplay": "8.5.2",
@@ -36,18 +37,19 @@
 		"graphql-request": "7.1.2",
 		"humanize-duration-ts": "2.1.1",
 		"input-otp": "1.4.2",
-		"isbot": "5.1.21",
+		"isbot": "5.1.22",
 		"lodash": "4.17.21",
-		"lucide-react": "0.473.0",
+		"lucide-react": "0.474.0",
 		"nanoid": "5.0.9",
 		"next-themes": "0.4.4",
-		"nodemailer": "6.9.16",
+		"nodemailer": "6.10.0",
 		"openid-client": "5.7.1",
 		"postgres": "3.4.5",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
-		"remix-routes": "1.7.7",
-		"remix-utils": "7.7.0",
+		"react-router": "7.1.3",
+		"remix-utils": "8.1.0",
+		"safe-routes": "1.0.3",
 		"sonner": "1.7.2",
 		"tailwind-merge": "2.6.0",
 		"tailwindcss-animate": "1.0.7",
@@ -57,19 +59,17 @@
 		"zod": "3.24.1"
 	},
 	"devDependencies": {
-		"@remix-run/dev": "2.15.2",
+		"@react-router/dev": "7.1.3",
 		"@tailwindcss/typography": "0.5.16",
-		"@types/crypto-js": "4.2.2",
-		"@types/lodash": "4.17.14",
+		"@types/lodash": "4.17.15",
 		"@types/nodemailer": "6.4.17",
 		"@types/react": "18.3.18",
 		"@types/react-dom": "18.3.5",
 		"autoprefixer": "10.4.20",
-		"drizzle-kit": "0.30.2",
+		"drizzle-kit": "0.30.3",
 		"tailwindcss": "4.0.0",
 		"typescript": "5.7.3",
-		"typescript-remix-routes-plugin": "1.0.1",
-		"vite": "5.4.14",
+		"vite": "6.0.11",
 		"vite-tsconfig-paths": "5.1.4"
 	},
 	"engines": {
