--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"include": ["env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": ["**/*.ts", "**/*.tsx", ".react-router/types/**/*"],
 	"compilerOptions": {
 		"lib": ["DOM", "DOM.Iterable", "ES2022"],
 		"isolatedModules": true,
@@ -22,14 +22,11 @@
 			"~/*": ["./app/*"],
 			"@ryot/transactional/*": ["../../libs/transactional/*"]
 		},
+		"rootDirs": [".", "./.react-router/types"],
+		"types": ["@react-router/node", "vite/client"],
 		"skipLibCheck": true,
 		"noEmit": true,
-		"outDir": "../../.moon/cache/types/apps/website",
-		"plugins": [
-			{
-				"name": "typescript-remix-routes-plugin"
-			}
-		]
+		"outDir": "../../.moon/cache/types/apps/website"
 	},
 	"references": [
 		{
