--- a/apps/frontend/moon.yml
+++ b/apps/frontend/moon.yml
@@ -1,15 +1,15 @@
 dependsOn:
-  - 'assets'
+  - "assets"
 
 tasks:
   dev:
-    command: 'remix vite:dev --port 3000 --host'
+    command: "react-router dev --port 3000 --host"
     local: true
 
   build:
-    command: 'remix vite:build'
-    inputs: ['@group(remix)']
-    outputs: ['build']
+    command: "react-router build"
+    inputs: ["@group(remix)"]
+    outputs: ["build"]
 
   typecheck:
-    inputs: ['@group(remix)']
+    inputs: ["@group(remix)"]
