--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,11 +23,11 @@
 		"@mantine/notifications": "7.16.2",
 		"@mjackson/file-storage": "0.5.0",
 		"@mjackson/form-data-parser": "0.7.0",
+		"@react-router/fs-routes": "7.1.4",
+		"@react-router/node": "7.1.3",
+		"@react-router/serve": "7.1.3",
 		"@remix-pwa/sw": "3.0.10",
 		"@remix-pwa/worker-runtime": "2.1.4",
-		"@remix-run/node": "2.15.2",
-		"@remix-run/react": "2.15.2",
-		"@remix-run/serve": "2.15.2",
 		"@ryot/generated": "workspace:*",
 		"@ryot/graphql": "workspace:*",
 		"@ryot/ts-utils": "workspace:*",
@@ -55,6 +55,7 @@
 		"nanoid": "5.0.9",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
+		"react-router": "7.1.3",
 		"react-virtuoso": "4.12.3",
 		"recharts": "2.15.1",
 		"remix-routes": "1.7.7",
@@ -69,8 +70,8 @@
 	},
 	"devDependencies": {
 		"@bitprojects/umami-logger-typescript": "1.0.10",
+		"@react-router/dev": "7.1.3",
 		"@remix-pwa/dev": "3.1.0",
-		"@remix-run/dev": "2.15.2",
 		"@types/cookie": "1.0.0",
 		"@types/crypto-js": "4.2.2",
 		"@types/howler": "2.2.12",
@@ -86,7 +87,7 @@
 		"typescript": "5.7.3",
 		"typescript-plugin-css-modules": "5.1.0",
 		"typescript-remix-routes-plugin": "1.0.1",
-		"vite": "5.4.14",
+		"vite": "6.0.11",
 		"vite-tsconfig-paths": "5.1.4"
 	},
 	"engines": {
