--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -82,7 +82,7 @@
 		"postcss": "8.5.1",
 		"postcss-preset-mantine": "1.17.0",
 		"postcss-simple-vars": "7.0.1",
-		"remix-development-tools": "4.7.7",
+		"react-router-devtools": "1.1.0",
 		"ts-essentials": "10.0.4",
 		"typescript": "5.7.3",
 		"typescript-plugin-css-modules": "5.1.0",
