--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -58,8 +58,8 @@
 		"react-router": "7.1.3",
 		"react-virtuoso": "4.12.3",
 		"recharts": "2.15.1",
-		"remix-routes": "1.7.7",
 		"remix-utils": "8.1.0",
+		"safe-routes": "1.0.3",
 		"tailwind-merge": "2.6.0",
 		"tiny-invariant": "1.3.3",
 		"ts-pattern": "5.6.2",
@@ -86,7 +86,6 @@
 		"ts-essentials": "10.0.4",
 		"typescript": "5.7.3",
 		"typescript-plugin-css-modules": "5.1.0",
-		"typescript-remix-routes-plugin": "1.0.1",
 		"vite": "6.0.11",
 		"vite-tsconfig-paths": "5.1.4"
 	},
