--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,17 +21,19 @@
 		"@mantine/hooks": "7.16.2",
 		"@mantine/modals": "7.16.2",
 		"@mantine/notifications": "7.16.2",
+		"@mjackson/file-storage": "0.5.0",
+		"@mjackson/form-data-parser": "0.7.0",
+		"@react-router/fs-routes": "7.1.4",
+		"@react-router/node": "7.1.4",
+		"@react-router/serve": "7.1.4",
 		"@remix-pwa/sw": "3.0.10",
 		"@remix-pwa/worker-runtime": "2.1.4",
-		"@remix-run/node": "2.15.2",
-		"@remix-run/react": "2.15.2",
-		"@remix-run/serve": "2.15.2",
 		"@ryot/generated": "workspace:*",
 		"@ryot/graphql": "workspace:*",
 		"@ryot/ts-utils": "workspace:*",
 		"@tabler/icons-react": "3.17.0",
-		"@tanstack/react-query": "5.65.1",
-		"@tanstack/react-query-devtools": "5.65.1",
+		"@tanstack/react-query": "5.66.0",
+		"@tanstack/react-query-devtools": "5.66.0",
 		"clsx": "2.1.1",
 		"cookie": "1.0.2",
 		"crypto-js": "4.2.0",
@@ -46,18 +48,19 @@
 		"humanize-duration-ts": "2.1.1",
 		"immer": "10.1.1",
 		"isbot": "5.1.22",
-		"jotai": "2.11.1",
+		"jotai": "2.11.2",
 		"js-cookie": "3.0.5",
 		"jwt-decode": "4.0.0",
 		"mantine-datatable": "7.15.1",
 		"nanoid": "5.0.9",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
+		"react-router": "7.1.4",
 		"react-virtuoso": "4.12.3",
 		"recharts": "2.15.1",
-		"remix-routes": "1.7.7",
-		"remix-utils": "7.7.0",
-		"tailwind-merge": "2.6.0",
+		"remix-utils": "8.1.0",
+		"safe-routes": "1.0.3",
+		"tailwind-merge": "3.0.1",
 		"tiny-invariant": "1.3.3",
 		"ts-pattern": "5.6.2",
 		"ufo": "1.5.4",
@@ -67,8 +70,8 @@
 	},
 	"devDependencies": {
 		"@bitprojects/umami-logger-typescript": "1.0.10",
+		"@react-router/dev": "7.1.4",
 		"@remix-pwa/dev": "3.1.0",
-		"@remix-run/dev": "2.15.2",
 		"@types/cookie": "1.0.0",
 		"@types/crypto-js": "4.2.2",
 		"@types/howler": "2.2.12",
@@ -79,12 +82,11 @@
 		"postcss": "8.5.1",
 		"postcss-preset-mantine": "1.17.0",
 		"postcss-simple-vars": "7.0.1",
-		"remix-development-tools": "4.7.7",
+		"react-router-devtools": "1.1.0",
 		"ts-essentials": "10.0.4",
 		"typescript": "5.7.3",
 		"typescript-plugin-css-modules": "5.1.0",
-		"typescript-remix-routes-plugin": "1.0.1",
-		"vite": "5.4.14",
+		"vite": "6.0.11",
 		"vite-tsconfig-paths": "5.1.4"
 	},
 	"engines": {
